[gd_scene load_steps=2 format=3 uid="uid://dalxnbbhktdgw"]

[ext_resource type="Script" path="res://scripts/Relatorio.gd" id="1_goyk0"]

[node name="Relatorio" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_goyk0")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129558, 0.129558, 0.129558, 1)
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="blank" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Titulo" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Relatório de Miss Conceptions cometidos"
horizontal_alignment = 1

[node name="blank2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "                             


"

[node name="Lbl_pos_invalid" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "         Acesso a posições inválidas: "

[node name="blank3" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Lbl_inf_loop" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "         Acesso a posições inválidas: "

[node name="blank4" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Lbl_rel_oper" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "         Acesso a posições inválidas: "

[node name="blank5" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Lbl_rel_logic" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "         Acesso a posições inválidas: "

[node name="blank6" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "                             

"

[node name="TituloDica" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "    Revise os seguintes conceitos"
vertical_alignment = 1

[node name="ListaDicas" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "        
         "

[node name="Button" type="Button" parent="."]
layout_mode = 2
offset_left = 452.0
offset_top = 557.0
offset_right = 615.0
offset_bottom = 588.0
text = "Explorar o mapa"
